# digital-badge-vending-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build-and-push-ecr.sh  cleanup-deployment.sh  deploy-to-ecs-express.sh  init_db.py  pyproject.toml  quickstart.sh  run.py  test-local-finch.sh  test_base_url.py  wsgi.py
.kiro/settings/: mcp.json
.kiro/steering/: python.md
app/: __init__.py
app/src/: utils.py
app/src/models/: __init__.py  badge.py  custom_field.py  resource.py  template.py
app/src/routes/: admin.py  auth.py  badge.py  public.py
app/src/services/: __init__.py  badge_generator.py  export_import_service.py  image_service.py  storage_service.py  strands_agent_service.py
app/src/templates/: badge.html  badges_list.html  base.html  index.html  (+1 more)
docs/: AI_FRAME_STYLES.md  ARCHITECTURE.md  ARCHITECTURE_FIX.md  AWS_CREDENTIALS.md  AWS_SETUP_QUICKSTART.md  BASE_URL_GUIDE.md  CHANGELOG.md  CLEANUP_GUIDE.md  CROSS_REGION_DEPLOYMENT.md  CUSTOM_FIELDS_IMPLEMENTATION.md  CUSTOM_FIELDS_QUICK_START.md  CUSTOM_FIELDS_VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  ECS_DEPLOYMENT_SUMMARY.md  ECS_EXPRESS_READINESS_REPORT.md  FINCH_GUIDE.md  FONT_FIX.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  RESTART_INSTRUCTIONS.md  SECURITY.md  SECURITY_UPDATE_SUMMARY.md  SESSION_FIX.md  TROUBLESHOOTING_DEPLOYMENT.md  prompt.md
scripts/: check-deployment-status.sh  diagnose-deployment.sh  fix-architecture.sh  migrate_custom_fields.py
tests/: README.md  test_api.py  test_custom_fields.py  test_custom_fields_complete.py  test_fonts.py
(+1 files in other folders)
